--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,25 +1,31 @@
+server:
+  servlet:
+    context-path: /api
+  port: 8099
+
 spring:
   application:
     name: sabangnet-server
-    h2:
-      console:
-        enabled: true
-        path: /h2
-    jpa:
-      database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
+      path: /h2
+  sql:
+    init:
+      mode: always
+      data-locations: classpath:data.sql
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create
+    defer-datasource-initialization: true
+    properties:
       hibernate:
-        ddl-auto: update
-        use-new-id-generator-mappings: false
-      properties:
-        hibernate:
-          dialect: org.hibernate.dialect.H2Dialect
-          format_sql: true      # 쿼리 로그 포맷 (정렬)
-          show_sql: true
-          defer-datasource-initialization: ture
-    datasource:
-      driver-class-name: org.h2.Driver
-      url: jdbc:h2:~/develop/h2; DE_CLOSE_DELAY=-1
-      username: sa
-      password:
-server:
-  port: 8099
+        dialect: org.hibernate.dialect.H2Dialect
+        format_sql: true      # 쿼리 로그 포맷 (정렬)
+        show_sql: true
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:tcp://localhost/~/develop/h2
+    username: sa
+    password:
