--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
   sql:
     init:
       mode: always
+      encoding: utf-8
       data-locations: classpath:data.sql
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
