add: AI 분석 테이블 추가 API 수정 및 GPT 4 테스트 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ external.api.order-url=/openapi/v2/seller/sellerNo/order/orders
 sltnCd.no=SBN
 siteCd.no=S0000001
 apiKey.no=WbgB8dpY6dh49Ufc532Z4kr/tx5heTYZhfqiCRexP0E=
+spring.ai.openai.api-key=sk-proj-Nj46b6tsLT7t0m60z2XzT3BlbkFJEE9fDv1rrro2QtjbuGGJ
